# pientyai-server

./: .replit  openapi.json  pyproject.toml  replit.nix  requirements.txt  temp_script.py  test.txt
app/: main.py
app/core/: config.py  (+4 more)
attached_assets/: Pasted--Call-manage-dashboard-stats-cron-jobs-to-setup-cron-jobs-SELECT-manage-dashboard-stats-cron--1741218141648.txt  Pasted--KNOWLEDGE-BASE-CONTEXT-KURUMSAL-POL-T-KA-VE-MEVZUAT-B-LG-LER-JSON-ARRAY-json-docume-1743815727302.txt  Pasted--analysis-Dok-man-KSB-Pompa-Armat-r-Sanayi-ve-Ticaret-A-ile-BAY-aras-nda-akdedilen-2024-1743778633229.txt  Pasted--data-fp-analysis-PDHd0PTTmFMF8a2PMBOiHBtSV-document-fp-file-iuz-1743726422530.txt  Pasted--recommendations-MADDE-DEME-GEC-KMELER-Bayilerin-geciken-demeleri-i-in-KSB-taraf-1744150952302.txt  Pasted--total-kb-chunks-6-kb-chunks-document-name-KSB-Turkiye-Genel-Satis-Kos-1744976808244.txt  Pasted--total-kb-chunks-7-kb-chunks-document-name-KSB-Turkiye-Genel-Satis-1744979666789.txt  Pasted--yile-tirilmi-Prompt-Projemizin-temel-ta-organizasyonlara-zel-bir-knowledge-base-e-dayal-s-z-1743281953132.txt  Pasted-1-MAL-ALIM-S-ZLE-MES-1-S-ZLE-MEN-N-TARAFLARI-ve-TARAFLARIN-B-LG-LER-AKSA-AKR-L-K-Bundan-sonra-1744982204257.txt  Pasted-10-err-LSo6deTGJCMpaqhzZybT9UMYe-HTTP-500-500-An-error-occurred-during-document-analysis-Traceback-1744908229588.txt  Pasted-14-err-Mi0wHsk9G3L6BmfYlMVzIy0Hl-HTTP-500-500-An-error-occurred-while-retrieving-analysis-details--1744910271120.txt  Pasted-2025-03-04-14-56-06-743-app-main-ERROR-Error-creating-database-tables-No-module-named-app-da-1741100227081.txt  (+27 more)
(+69 files in other folders)
